Gap fix

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@
     /* margin-left: 20%; */
   }
   
-  .nav-links li a {
+  .nav-links li .main-links {
     position: relative;
     color: white;
     text-decoration: none;
@@ -47,7 +47,7 @@
   
   
   /*This is for the underline of the nav links*/
-  a::after{
+  .main-links::after{
     content: "";
     position: absolute;
     background-color: #ffffff;
@@ -59,7 +59,7 @@
   }
   /*      End for the underline            */
   
-  a:hover::after{
+  .main-links:hover::after{
     width: 100%;
   }
   
@@ -74,7 +74,8 @@
    h1{
     margin-top: 5vh;
     text-align: center;
-    font-size: 55px;
+    font-size: 58px;
+    font-weight: bold;
     margin-left: 10%;
     margin-right: 10%;
     margin-bottom: 5%;
@@ -192,7 +193,7 @@
     .nav-links li {
       opacity: 0;
     }
-    .nav-links li a {
+    .nav-links li .main-links {
       font-size: 25px;
     }  
     li.fade {
@@ -240,35 +241,17 @@
       font-family: Papyrus, fantasy;
     }
   }
-
-  /* @media only screen and (max-width: 481px) {
-    .sphere{
-      position: relative;
-      width: 30vh;
-      height: 30vh;
-      text-align: center;
-      justify-content: center;
-      display: block;
-      margin: 0 auto;
-      z-index: -1;
-    }
-  } */
-
-
-  
+ 
   p{
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
+    margin: auto;
   }
-      /*                      About Section                        */
 
- /* .paragraph-about{
-   position: relative;
-   align-items: center;
-   justify-content: center;
- } */
+
+      /*                      About Section                        */
 
 .about-p{
    text-align: center;
@@ -280,16 +263,27 @@
 
 
       /*                   End of About Section                    */
+
+      .bottom-links{
+        display: block;
+        font-size: 50px;
+        text-align: center;
+        color: #ffffff;
+        margin-bottom: 5vh;
+      }
+
+
 /*Footer*/
   .footer {
         position: relative;
+        font-weight: bold;
         margin: auto;
         height: 10vh;
         width: 100%;
         background-color: #000000;
         color: #ffffff;
         text-align: center;
-        padding-top: 4vh;
+        padding-top: 3vh;
       }
 /*End of footer*/
        
